# CaninoEngineCPP

./: .gitignore  CMakeLists.txt  README.md  README_en.md  canino.ini  capture.ps1  capture_fps.ps1  check_asset.ps1  debug.cpp  implementation_plan_demo2.md  implementation_plan_input.md  implementation_plan_math.md  implementation_plan_memory.md  implementation_plan_platform_windows.md  implementation_plan_project.md  implementation_plan_test.md  implementation_plan_threads.md  scan_colors.ps1  scan_colors.py  stb_test.cpp  task_01.md  test_log.txt  walkthrough_ecs.md  walkthrough_memory.md  walkthrough_project.md  walkthrough_rhi.md  walkthrough_test.md  walkthrough_threads.md
assets/docs/: walkthrough_demo1.md  walkthrough_demo2.md  walkthrough_math.md  walkthrough_rhi_v2.md
demos/: CMakeLists.txt
demos/demo1/: CMakeLists.txt
demos/demo1/src/: main.cpp
demos/demo2/: CMakeLists.txt
demos/demo2/src/: main.cpp
demos/fpsdemo/: CMakeLists.txt
demos/fpsdemo/src/: main.cpp
demos/texturetest/: CMakeLists.txt
demos/texturetest/src/: main.cpp
docs/: DX11_Texture_PostMortem.md  implementation_plan_demo1.md  implementation_plan_ecs.md  implementation_plan_physics.md  implementation_plan_rhi_dx11.md  implementation_plan_rhi_v1.md  implementation_plan_rhi_v2.md  walkthrough_input.md  walkthrough_physics.md  walkthrough_platform_windows.md  walkthrough_rhi_dx11.md
engine/: CMakeLists.txt
engine/src/canino/: canino.cpp
engine/src/canino/core/: config_parser.cpp  config_parser.h  core.h  job_system.cpp  job_system.h  memory.cpp  memory.h  memory_arena.cpp  memory_arena.h  memory_pool.cpp  memory_pool.h
engine/src/canino/ecs/: component_array.h  ecs.h  registry.cpp  registry.h
engine/src/canino/math/: math_ops.h  math_types.h
engine/src/canino/physics/: physics.cpp  physics.h
engine/src/canino/platform/: input.cpp  input.h  window.h
engine/src/canino/platform/windows/: window_win32.cpp
engine/src/canino/render/: mesh_loader.cpp  mesh_loader.h  rhi.cpp  rhi.h  rhi_backend.h
engine/src/canino/render/backends/: dx11_rhi.cpp  dx12_rhi.cpp  opengl_rhi.cpp  vulkan_rhi.cpp
engine/src/canino/render/opengl/: opengl_rhi.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test_core.h  test_ecs.cpp  test_input.cpp  test_jobs.cpp  test_main.cpp  test_math.cpp  test_memory.cpp  test_platform.cpp  test_rhi.cpp
